--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "history": "^4.9.0",
     "react": "^16.8.4",
+    "react-datepicker": "^2.2.0",
     "react-dom": "^16.8.4",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8"
